--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="containter">
     <div class="row">
-        <div class="col-xs-12 text-center enter_section">
+        <div class="col-xs-12 text-center enter_section jumbotron">
             <form action="/scrape" method="GET">
             
             <button type="submit" class="btn btn-primary" id="text-enter-button"> Search for recipes</button>
@@ -18,7 +18,7 @@
             <a href="{{this.link}}" target="_blank">{{this.title}}</a>
         </h5>
         </form>
-    <img class="media" src="{{this.img}}">
+
     </div>
 </div>
 {{/each}}
