--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,6 +10,9 @@
     </div>
 </div>
 
+{{!-- right here i would have a post button that would generate for each recipe that would allow for comments 
+ --}}
+
 
 {{#each recipe}}
 <div class="story-body card container" id={{this._id}}>
@@ -22,3 +25,7 @@
     </div>
 </div>
 {{/each}}
+
+{{!-- im gonna psuedocode the comment section
+{{#each comment 
+For each recipe i would go through and post each comment}} --}}
